@@ -150,9 +150,9 @@ BezoutMatrix(R,UP,M,Row,Col): Exports == Implementation where
             (bezoutResultant(f,differentiate f) exquo (lc f)) :: R
           -((bezoutResultant(f,differentiate f) exquo (lc f)) :: R)
 
-        else
+      else
 
-          bezoutDiscriminant f ==
+        bezoutDiscriminant f ==
             lc f = 1 =>
               degMod4 := (degree f) rem 4
               (degMod4 = 0) or (degMod4 = 1) =>
