@@ -202,7 +202,7 @@ InnerNormalBasisFieldFunctions(GF): Exports == Implementation where
       k:SI:=1$SI
       expT:List SI:=expTable.sizeGF
       while (logqe >= expT.k) and not zero? expT.k repeat k:=k +$SI 1$SI
-      mult:I:=(sizeGF-1) *$I sizeGF ^$I ((k-1)pretend NNI) +$I_
+      mult:I:=(sizeGF-1) *$I sizeGF ^$I ((k-1)pretend NNI) +$I
               ((logqe +$SI k -$SI 1$SI) quo$SI k)::I -$I 2
       (10*mult) >= (15 * (e1::I)) =>
 --      print("repeatedSquaring(a,e)"::OUT)
