@@ -908,6 +908,7 @@ FortranProgram(name,returnType,arguments,symbols): Exports == Implement where
 ++ References:
 ++ Description:
 ++ This domain represents three dimensional matrices over a general object type
+-- Currently unused.
 ThreeDimensionalMatrix(R) : Exports == Implementation where
 
   R : SetCategory
@@ -1098,8 +1099,7 @@ ThreeDimensionalMatrix(R) : Exports == Implementation where
         for i in 1..iLength1 repeat
           for j in 1..jLength1 repeat
             for k in 1..kLength1 repeat
-              sum := (elt(mat1,i,j,k)::R +$R_
-                      elt(mat2,i,j,k)::R)
+              sum := (elt(mat1,i,j,k)::R +$R elt(mat2,i,j,k)::R)
               setelt(row1,k-1,sum)$(PA R)
             setelt(row2,j-1,copy(row1)$(PA R))$(PA PA R)
           setelt(row3,i-1,copy(row2)$(PA PA R))$(PA PA PA R)
