@@ -1387,6 +1387,7 @@ PolynomialSquareFree(VarSet:OrderedSet,E,RC:GcdDomain,P):C == T where
 ++ a version doing the work on place and also with a special
 ++ case for squares. We've done this in Basicmath, but we
 ++ believe that this out of the scope of FriCAS.
+-- Currently unused.
 
 UnivariatePolynomialMultiplicationPackage(R: Ring, U: UnivariatePolynomialCategory(R)): C == T
   where
@@ -1399,7 +1400,7 @@ UnivariatePolynomialMultiplicationPackage(R: Ring, U: UnivariatePolynomialCatego
         ++ \spad{karatsuba(a,b)} returns \spad{a*b} by applying
         ++ Karatsuba's trick once. The other multiplications
         ++ are performed by calling \spad{*} from \spad{U}.
-      karatsuba: (U, U, NonNegativeInteger, NonNegativeInteger) -> U;
+      karatsuba: (U, U, NonNegativeInteger, NonNegativeInteger) -> U
         ++ \spad{karatsuba(a,b,l,k)} returns \spad{a*b} by applying
         ++ Karatsuba's trick provided that both \spad{a} and \spad{b}
         ++ have at least \spad{l} terms and \spad{k > 0} holds
