@@ -1,3 +1,13 @@
+2011-01-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/bezout.spad.pamphlet,
+	src/algebra/fortran.spad.pamphlet,
+	src/algebra/poly.spad.pamphlet,
+	src/algebra/ffnb.spad.pamphlet,
+	src/interp/int-top.boot, src/interp/s-parser.boot,
+	src/interp/macros.lisp, src/interp/vmlisp.lisp:
+	Misc cleanups.
+
 2011-01-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/msgdb.boot, src/interp/nruncomp.boot,
